--- a/index.html
+++ b/index.html
@@ -60,19 +60,20 @@
           <span class="block px-4 py-2 text-gray-500">Chemical Engineering (coming soon)</span>
         </div>
       </div>
-      <div class="relative group">
-        <button class="flex items-center text-gray-300 hover:text-white transition-colors">Interview Questions<svg class="ml-1 h-4 w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg></button>
-        <div class="absolute left-0 mt-2 w-64 bg-black/80 backdrop-blur rounded-md opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all">
-          <a href="content.html" class="block px-4 py-2 text-gray-300 hover:bg-accent-blue/20 hover:text-white">Electrical Engineering</a>
-          <span class="block px-4 py-2 text-gray-500">Mechanical Engineering (coming soon)</span>
-          <span class="block px-4 py-2 text-gray-500">Civil Engineering (coming soon)</span>
-          <span class="block px-4 py-2 text-gray-500">Chemical Engineering (coming soon)</span>
+        <div class="relative group">
+          <button class="flex items-center text-gray-300 hover:text-white transition-colors">Interview Questions<svg class="ml-1 h-4 w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg></button>
+          <div class="absolute left-0 mt-2 w-64 bg-black/80 backdrop-blur rounded-md opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all">
+            <a href="content.html" class="block px-4 py-2 text-gray-300 hover:bg-accent-blue/20 hover:text-white">Electrical Engineering</a>
+            <span class="block px-4 py-2 text-gray-500">Mechanical Engineering (coming soon)</span>
+            <span class="block px-4 py-2 text-gray-500">Civil Engineering (coming soon)</span>
+            <span class="block px-4 py-2 text-gray-500">Chemical Engineering (coming soon)</span>
+          </div>
         </div>
+        <a href="ai.html" class="text-gray-300 hover:text-white transition-colors">AI Interviewer</a>
       </div>
+      <a href="https://forms.gle/8aHq2fjXJQZP2PDN8" class="hidden md:inline-block rounded-full bg-accent-blue text-white px-5 py-2 font-medium hover:bg-opacity-80 transition">Sign Up</a>
     </div>
-    <a href="https://forms.gle/8aHq2fjXJQZP2PDN8" class="hidden md:inline-block rounded-full bg-accent-blue text-white px-5 py-2 font-medium hover:bg-opacity-80 transition">Sign Up</a>
-  </div>
-</nav>
+  </nav>
 
 
   <!-- Hero Section -->
