--- a/ai.html
+++ b/ai.html
@@ -101,7 +101,7 @@
       }
     });
 
-    const OPENAI_API_KEY = '';
+    const OPENAI_API_KEY = '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';
 
     const setupEl = document.getElementById('setup');
     const startBtn = document.getElementById('start-btn');
