--- a/concepts/ohms_law.html
+++ b/concepts/ohms_law.html
@@ -68,6 +68,8 @@
             <span class="block px-4 py-2 text-gray-500">Chemical Engineering (coming soon)</span>
           </div>
         </div>
+      <a href="../interview.html" class="text-gray-300 hover:text-white transition-colors">Interview Quiz</a>
+      <a href="../ai.html" class="text-gray-300 hover:text-white transition-colors">AI Interviewer</a>
       </div>
       <a href="https://forms.gle/8aHq2fjXJQZP2PDN8" class="hidden md:inline-block rounded-full bg-accent-blue text-white px-5 py-2 font-medium hover:bg-opacity-80 transition">Sign Up</a>
     </div>
